--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,12 @@ ffigen:
       
 environment:
   sdk: ^3.3.0
-
-# Add regular dependencies here.
-dependencies:
+# Add regular dependencies here.dependencies:
   # path: ^1.8.0
 
 dev_dependencies:
   ffigen: ^12.0.0
   lints: ^3.0.0
   test: ^1.24.0
+dependencies:
+  ffi: ^2.1.2
